# ti-platform

./: .dockerignore  .env.example  .gitignore  README.md  WORKFLOW.md  analyze_t1486.py  docker-compose.dev.yml  docker-compose.yml  instruction.md  migrate_attack.sql  reindex.py  ruff.toml  test_graph.py  test_ioc.py  tmp_rel.sql
api/: pyproject.toml
api/app/: __init__.py  main.py  prompts.py
api/app/core/: config.py  database.py  logging.py  opensearch.py  redis.py
api/app/middleware/: audit.py  auth.py
api/app/models/: models.py
api/app/normalizers/: __init__.py  correlation.py  diamond.py  ioc_lifecycle.py  killchain.py
api/app/routes/: admin.py  ai_settings.py  auth.py  cases.py  dashboard.py  enrichment.py  graph.py  health.py  intel.py  iocs.py  news.py  notifications.py  reports.py  search.py  settings.py  techniques.py
api/app/schemas/: __init__.py
api/app/services/: ai.py  auth.py  cases.py  cross_enrichment.py  database.py  domain.py  enrichment.py  export.py  graph.py  intel_extraction.py  live_lookup.py  mitre.py  news.py  notifications.py  nvd_enrichment.py  reports.py  research.py  scoring.py  search.py  webhook.py
api/app/services/feeds/: abuseipdb.py  base.py  kev.py  malwarebazaar.py  nvd.py  otx.py  shodan.py  threatfox.py  urlhaus.py  virustotal.py
api/tests/: conftest.py  test_normalizers.py  test_routes.py
caddy/: Caddyfile
cloudflare/: tunnel-config.yml
db/: schema.sql
docker/: Dockerfile.api  Dockerfile.ui  Dockerfile.worker
docs/: AI-CONFIGURATION.md  ARCHITECTURE.md  CYBER-NEWS.md  INTEGRATION.md  Instruction.md  (+4 more)
(+83 files in other folders)
